--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ org.gradle.jvmargs=-Xmx1G
 	# check this on https://fabricmc.net/develop/
 	fabric_version=0.76.0+1.18.2
 
+	dbus_java_version=3.3.2
+
