--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-	# Fabric Properties
-	# check these on https://fabricmc.net/develop/
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.4
-	loader_version=0.14.21
+# Fabric Properties
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.4
+loader_version=0.14.21
 
-	# Mod Properties
-	mod_version = 1.0-SNAPSHOT
-	maven_group = com.martysh12
-	archives_base_name = bnbnav
+# Mod Properties
+mod_version = 1.0-SNAPSHOT
+maven_group = com.martysh12
+archives_base_name = bnbnav
 
-	# Dependencies
-	# check this on https://fabricmc.net/develop/
-	fabric_version=0.76.0+1.18.2
+# Dependencies
+# check this on https://fabricmc.net/develop/
+fabric_version=0.76.0+1.18.2
 
-	dbus_java_version=3.3.2
-
+# Non-Minecraft Dependencies
+jsonrpc_version=1.6
+junixsocket_version=2.6.2
